# JTK_Cycle2

./: .gitignore  BENCHMARK_PROTOCOL.md  COLLAB_ONBOARDING.md  CONTRIBUTING.md  README.md  pyproject.toml
data/: GSE11923_expression_CT_top1000var.tsv  README.md
examples/: run_demo.py
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: benchmark_perm_backends.py  downsample_timecourse.py  geo_gse11923_preview.py  rank_results.py
src/jtk_cycle_redo/: __init__.py  core.py  stats.py  synthetic.py
src/jtk_cycle_redo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_core.py
