[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jtk-cycle-redo"
version = "0.1.0"
description = "Python reimplementation scaffold for JTK_CYCLE-style rhythm detection"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "John Hogenesch + Claw"}]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
