[package]
name = "jtk_cycle_redo_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "_rust_stats"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.21"
pyo3 = { version = "0.21", features = ["extension-module"] }
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.10"

[package.metadata.maturin]
module-name = "jtk_cycle_redo._rust_stats"
